--- a/pallets/poe/Cargo.toml
+++ b/pallets/poe/Cargo.toml
@@ -45,6 +45,7 @@ std = [
 	"sp-core/std",
 	"sp-io/std",
 	"sp-runtime/std",
+	"sp-std/std",
 ]
 runtime-benchmarks = [
 	"frame-benchmarking/runtime-benchmarks",
